refactoring according to PR comments